--- a/index.html
+++ b/index.html
@@ -35,8 +35,31 @@ const fibonacci = (n, arr = [0, 1]) =>
 console.log(fibonacci(5));
 
 
-//
+// 7. Write a function to check if two strings are anagrams.
+const areAnagrams = (str1, str2) => 
+  str1.split("").sort().join("") === str2.split("").sort().join("");
 
+console.log(areAnagrams("listen", "silent")); 
+
+// 8. Write a function to find the second largest number in an array.
+const secondLargest = (arr) => {
+  const uniqueSorted = [...new Set(arr)].sort((a, b) => b - a);
+  return uniqueSorted.length > 1 ? uniqueSorted[1] : null;
+};
+
+console.log(secondLargest([10, 20, 4, 45, 99]));
+
+// 9. Write a function to find the missing number in an array.
+const findMissingNumber = (arr) => {
+  const n = arr.length + 1;
+  const expectedSum = (n * (n + 1)) / 2;
+  const actualSum = arr.reduce((sum, num) => sum + num, 0);
+  return expectedSum - actualSum;
+};
+console.log(findMissingNumber([1, 2, 4, 5])); 
+
+
+//
     </script>
 </body>
 </html>
