--- a/index.html
+++ b/index.html
@@ -59,7 +59,77 @@ const findMissingNumber = (arr) => {
 console.log(findMissingNumber([1, 2, 4, 5])); 
 
 
-//
+// 10. Write a function to count the occurrences of each character in a string.
+const countOccurrences = (str) => 
+  str.split("").reduce((acc, char) => (acc[char] = (acc[char] || 0) + 1, acc), {});
+
+console.log(countOccurrences("hello")); // Expected output: { h: 1, e: 1, l: 2, o: 1 }
+
+// 11. Write a function to flatten a nested array.
+const flattenArray = (arr) => arr.flat(Infinity);
+
+console.log(flattenArray([1, [2, [3, 4], 5], 6])); // Expected output: [1, 2, 3, 4, 5, 6]
+
+// 12. Write a function to implement a debounce function.
+const debounce = (func, delay) => {
+  let timer;
+  return (...args) => {
+    clearTimeout(timer);
+    timer = setTimeout(() => func(...args), delay);
+  };
+};
+
+// 13. Write a function to implement a throttle function.
+const throttle = (func, limit) => {
+  let lastFunc;
+  let lastRan;
+  return (...args) => {
+    const now = Date.now();
+    if (!lastRan || now - lastRan >= limit) {
+      func(...args);
+      lastRan = now;
+    } else {
+      clearTimeout(lastFunc);
+      lastFunc = setTimeout(() => {
+        func(...args);
+        lastRan = Date.now();
+      }, limit - (now - lastRan));
+    }
+  };
+};
+
+
+// 14. Write a function to find the longest word in a string.
+const longestWord = (str) => 
+  str.split(" ").reduce((longest, word) => word.length > longest.length ? word : longest, "");
+
+console.log(longestWord("The quick brown fox jumps over the lazy dog")); 
+
+// 15. Write a function to find the intersection of two arrays.
+const arrayIntersection = (arr1, arr2) => arr1.filter(num => arr2.includes(num));
+
+console.log(arrayIntersection([1, 2, 3], [2, 3, 4])); 
+
+// 16. Write a function to group array elements by a key.
+const groupByKey = (arr, key) => 
+  arr.reduce((acc, obj) => {
+    (acc[obj[key]] = acc[obj[key]] || []).push(obj);
+    return acc;
+  }, {});
+
+const data = [
+  { category: "fruit", name: "apple" },
+  { category: "fruit", name: "banana" },
+  { category: "vegetable", name: "carrot" }
+];
+console.log(groupByKey(data, "category")); 
+
+//17.
+function mergeSortedArrays(arr1, arr2) {
+    let result = [];
+}
+
+
     </script>
 </body>
 </html>
